tests/sksl/errors/ReturnDifferentType.sksl
int main() { return 1; }
void main() {}
